@@ -1,18 +1,18 @@
 /*
  * The MIT License
- * 
+ *
  * Copyright (c) 2004-2009, Sun Microsystems, Inc., Kohsuke Kawaguchi, Stephen Connolly, Thomas J. Black
- * 
+ *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
  * in the Software without restriction, including without limitation the rights
  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  * copies of the Software, and to permit persons to whom the Software is
  * furnished to do so, subject to the following conditions:
- * 
+ *
  * The above copyright notice and this permission notice shall be included in
  * all copies or substantial portions of the Software.
- * 
+ *
  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -21,8 +21,12 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package hudson.model;
 
+import static hudson.init.InitMilestone.JOB_CONFIG_ADAPTED;
+
+import edu.umd.cs.findbugs.annotations.NonNull;
 import hudson.BulkChange;
 import hudson.DescriptorExtensionList;
 import hudson.Extension;
@@ -37,22 +41,9 @@ import hudson.triggers.SafeTimerTask;
 import hudson.util.DescribableList;
 import hudson.util.FormApply;
 import hudson.util.FormValidation;
-import jenkins.model.Jenkins;
-import jenkins.model.ModelObjectWithChildren;
-import jenkins.model.ModelObjectWithContextMenu.ContextMenu;
-import jenkins.util.Timer;
-import org.kohsuke.stapler.HttpResponse;
-import org.kohsuke.stapler.QueryParameter;
-import org.kohsuke.stapler.StaplerRequest;
-import org.kohsuke.stapler.StaplerResponse;
-import org.kohsuke.stapler.export.Exported;
-import org.kohsuke.stapler.export.ExportedBean;
-import org.kohsuke.stapler.interceptor.RequirePOST;
-
-import edu.umd.cs.findbugs.annotations.NonNull;
-import javax.servlet.ServletException;
 import java.io.File;
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.util.AbstractList;
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -61,10 +52,20 @@ import java.util.Map;
 import java.util.concurrent.TimeUnit;
 import java.util.logging.Level;
 import java.util.logging.Logger;
+import javax.servlet.ServletException;
+import jenkins.model.Jenkins;
+import jenkins.model.ModelObjectWithChildren;
+import jenkins.model.ModelObjectWithContextMenu.ContextMenu;
+import jenkins.util.Timer;
 import net.sf.json.JSONObject;
+import org.kohsuke.stapler.HttpResponse;
+import org.kohsuke.stapler.QueryParameter;
+import org.kohsuke.stapler.StaplerRequest;
+import org.kohsuke.stapler.StaplerResponse;
+import org.kohsuke.stapler.export.Exported;
+import org.kohsuke.stapler.export.ExportedBean;
+import org.kohsuke.stapler.interceptor.RequirePOST;
 import org.kohsuke.stapler.verb.POST;
-
-import static hudson.init.InitMilestone.JOB_CONFIG_ADAPTED;
 
 /**
  * Serves as the top of {@link Computer}s in the URL hierarchy.
@@ -79,15 +80,17 @@ public final class ComputerSet extends AbstractModelObject implements Describabl
      * This is the owner that persists {@link #monitors}.
      */
     private static final Saveable MONITORS_OWNER = new Saveable() {
+        @Override
         public void save() throws IOException {
             getConfigFile().write(monitors);
             SaveableListener.fireOnChange(this, getConfigFile());
         }
     };
 
-    private static final DescribableList<NodeMonitor,Descriptor<NodeMonitor>> monitors
+    private static final DescribableList<NodeMonitor, Descriptor<NodeMonitor>> monitors
             = new DescribableList<>(MONITORS_OWNER);
 
+    @Override
     @Exported
     public String getDisplayName() {
         return Messages.ComputerSet_DisplayName();
@@ -102,11 +105,12 @@ public final class ComputerSet extends AbstractModelObject implements Describabl
         return monitors.toList();
     }
 
-    @Exported(name="computer",inline=true)
+    @Exported(name = "computer", inline = true)
     public Computer[] get_all() {
         return Jenkins.get().getComputers();
     }
 
+    @Override
     public ContextMenu doChildrenContextMenu(StaplerRequest request, StaplerResponse response) throws Exception {
         ContextMenu m = new ContextMenu();
         for (Computer c : get_all()) {
@@ -118,22 +122,22 @@ public final class ComputerSet extends AbstractModelObject implements Describabl
     /**
      * Exposing {@link NodeMonitor#all()} for Jelly binding.
      */
-    public DescriptorExtensionList<NodeMonitor,Descriptor<NodeMonitor>> getNodeMonitorDescriptors() {
+    public DescriptorExtensionList<NodeMonitor, Descriptor<NodeMonitor>> getNodeMonitorDescriptors() {
         return NodeMonitor.all();
     }
 
-    public static DescribableList<NodeMonitor,Descriptor<NodeMonitor>> getMonitors() {
+    public static DescribableList<NodeMonitor, Descriptor<NodeMonitor>> getMonitors() {
         return monitors;
     }
 
     /**
      * Returns a subset pf {@link #getMonitors()} that are {@linkplain NodeMonitor#isIgnored() not ignored}.
      */
-    public static Map<Descriptor<NodeMonitor>,NodeMonitor> getNonIgnoredMonitors() {
-        Map<Descriptor<NodeMonitor>,NodeMonitor> r = new HashMap<>();
+    public static Map<Descriptor<NodeMonitor>, NodeMonitor> getNonIgnoredMonitors() {
+        Map<Descriptor<NodeMonitor>, NodeMonitor> r = new HashMap<>();
         for (NodeMonitor m : monitors) {
-            if(!m.isIgnored())
-                r.put(m.getDescriptor(),m);
+            if (!m.isIgnored())
+                r.put(m.getDescriptor(), m);
         }
         return r;
     }
@@ -145,10 +149,12 @@ public final class ComputerSet extends AbstractModelObject implements Describabl
         return new AbstractList<String>() {
             final List<Node> nodes = Jenkins.get().getNodes();
 
+            @Override
             public String get(int index) {
                 return nodes.get(index).getNodeName();
             }
 
+            @Override
             public int size() {
                 return nodes.size();
             }
@@ -162,9 +168,9 @@ public final class ComputerSet extends AbstractModelObject implements Describabl
      */
     @Exported
     public int getTotalExecutors() {
-        int r=0;
+        int r = 0;
         for (Computer c : get_all()) {
-            if(c.isOnline())
+            if (c.isOnline())
                 r += c.countExecutors();
         }
         return r;
@@ -175,9 +181,9 @@ public final class ComputerSet extends AbstractModelObject implements Describabl
      */
     @Exported
     public int getBusyExecutors() {
-        int r=0;
+        int r = 0;
         for (Computer c : get_all()) {
-            if(c.isOnline())
+            if (c.isOnline())
                 r += c.countBusy();
         }
         return r;
@@ -187,13 +193,14 @@ public final class ComputerSet extends AbstractModelObject implements Describabl
      * {@code getTotalExecutors()-getBusyExecutors()}, plus executors that are being brought online.
      */
     public int getIdleExecutors() {
-        int r=0;
+        int r = 0;
         for (Computer c : get_all())
-            if((c.isOnline() || c.isConnecting()) && c.isAcceptingTasks())
+            if ((c.isOnline() || c.isConnecting()) && c.isAcceptingTasks())
                 r += c.countIdle();
         return r;
     }
 
+    @Override
     public String getSearchUrl() {
         return "/computers/";
     }
@@ -206,8 +213,8 @@ public final class ComputerSet extends AbstractModelObject implements Describabl
     public void do_launchAll(StaplerRequest req, StaplerResponse rsp) throws IOException {
         Jenkins.get().checkPermission(Jenkins.ADMINISTER);
 
-        for(Computer c : get_all()) {
-            if(c.isLaunchSupported())
+        for (Computer c : get_all()) {
+            if (c.isLaunchSupported())
                 c.connect(true);
         }
         rsp.sendRedirect(".");
@@ -219,9 +226,9 @@ public final class ComputerSet extends AbstractModelObject implements Describabl
      * TODO: ajax on the client side to wait until the update completion might be nice.
      */
     @RequirePOST
-    public void doUpdateNow( StaplerRequest req, StaplerResponse rsp ) throws IOException, ServletException {
+    public void doUpdateNow(StaplerRequest req, StaplerResponse rsp) throws IOException, ServletException {
         Jenkins.get().checkPermission(Jenkins.MANAGE);
-        
+
         for (NodeMonitor nodeMonitor : NodeMonitor.getAll()) {
             Thread t = nodeMonitor.triggerUpdate();
             String columnCaption = nodeMonitor.getColumnCaption();
@@ -236,17 +243,17 @@ public final class ComputerSet extends AbstractModelObject implements Describabl
      * First check point in creating a new agent.
      */
     @RequirePOST
-    public synchronized void doCreateItem( StaplerRequest req, StaplerResponse rsp,
+    public synchronized void doCreateItem(StaplerRequest req, StaplerResponse rsp,
                                            @QueryParameter String name, @QueryParameter String mode,
-                                           @QueryParameter String from ) throws IOException, ServletException {
+                                           @QueryParameter String from) throws IOException, ServletException {
         final Jenkins app = Jenkins.get();
         app.checkPermission(Computer.CREATE);
 
-        if(mode!=null && mode.equals("copy")) {
+        if (mode != null && mode.equals("copy")) {
             name = checkName(name);
 
             Node src = app.getNode(from);
-            if(src==null) {
+            if (src == null) {
                 if (Util.fixEmpty(from) == null) {
                     throw new Failure(Messages.ComputerSet_SpecifySlaveToCopy());
                 } else {
@@ -263,7 +270,7 @@ public final class ComputerSet extends AbstractModelObject implements Describabl
             app.addNode(result);
 
             // send the browser to the config page
-            rsp.sendRedirect2(result.getNodeName()+"/configure");
+            rsp.sendRedirect2(result.getNodeName() + "/configure");
         } else {
             // proceed to step 2
             if (mode == null) {
@@ -274,7 +281,7 @@ public final class ComputerSet extends AbstractModelObject implements Describabl
             if (d == null) {
                 throw new Failure("No node type ‘" + mode + "’ is known");
             }
-            d.handleNewNodePage(this,name,req,rsp);
+            d.handleNewNodePage(this, name, req, rsp);
         }
     }
 
@@ -282,9 +289,9 @@ public final class ComputerSet extends AbstractModelObject implements Describabl
      * Really creates a new agent.
      */
     @POST
-    public synchronized void doDoCreateItem( StaplerRequest req, StaplerResponse rsp,
+    public synchronized void doDoCreateItem(StaplerRequest req, StaplerResponse rsp,
                                            @QueryParameter String name,
-                                           @QueryParameter String type ) throws IOException, ServletException, FormException {
+                                           @QueryParameter String type) throws IOException, ServletException, FormException {
         final Jenkins app = Jenkins.get();
         app.checkPermission(Computer.CREATE);
         String fixedName = Util.fixEmptyAndTrim(name);
@@ -292,7 +299,7 @@ public final class ComputerSet extends AbstractModelObject implements Describabl
 
         JSONObject formData = req.getSubmittedForm();
         formData.put("name", fixedName);
-        
+
         // TODO type is probably NodeDescriptor.id but confirm
         Node result = NodeDescriptor.all().find(type).newInstance(req, formData);
         app.addNode(result);
@@ -306,13 +313,13 @@ public final class ComputerSet extends AbstractModelObject implements Describabl
      * @return trimmed name if valid; throws ParseException if not
      */
     public String checkName(String name) throws Failure {
-        if(name==null)
+        if (name == null)
             throw new Failure("Query parameter 'name' is required");
 
         name = name.trim();
         Jenkins.checkGoodName(name);
 
-        if(Jenkins.get().getNode(name)!=null)
+        if (Jenkins.get().getNode(name) != null)
             throw new Failure(Messages.ComputerSet_SlaveAlreadyExists(name));
 
         // looks good
@@ -325,9 +332,9 @@ public final class ComputerSet extends AbstractModelObject implements Describabl
     public FormValidation doCheckName(@QueryParameter String value) throws IOException, ServletException {
         Jenkins.get().checkPermission(Computer.CREATE);
 
-        if(Util.fixEmpty(value)==null)
+        if (Util.fixEmpty(value) == null)
             return FormValidation.ok();
-        
+
         try {
             checkName(value);
             return FormValidation.ok();
@@ -335,22 +342,22 @@ public final class ComputerSet extends AbstractModelObject implements Describabl
             return FormValidation.error(e.getMessage());
         }
     }
-    
+
     /**
      * Accepts submission from the configuration page.
      */
     @POST
-    public synchronized HttpResponse doConfigSubmit( StaplerRequest req) throws IOException, ServletException, FormException {
+    public synchronized HttpResponse doConfigSubmit(StaplerRequest req) throws IOException, ServletException, FormException {
         BulkChange bc = new BulkChange(MONITORS_OWNER);
         try {
             Jenkins.get().checkPermission(Jenkins.MANAGE);
-            monitors.rebuild(req,req.getSubmittedForm(),getNodeMonitorDescriptors());
+            monitors.rebuild(req, req.getSubmittedForm(), getNodeMonitorDescriptors());
 
             // add in the rest of instances are ignored instances
             for (Descriptor<NodeMonitor> d : NodeMonitor.all())
-                if(monitors.get(d)==null) {
+                if (monitors.get(d) == null) {
                     NodeMonitor i = createDefaultInstance(d, true);
-                    if(i!=null)
+                    if (i != null)
                         monitors.add(i);
                 }
 
@@ -369,13 +376,14 @@ public final class ComputerSet extends AbstractModelObject implements Describabl
      * {@link NodeMonitor}s are persisted in this file.
      */
     private static XmlFile getConfigFile() {
-        return new XmlFile(new File(Jenkins.get().getRootDir(),"nodeMonitors.xml"));
+        return new XmlFile(new File(Jenkins.get().getRootDir(), "nodeMonitors.xml"));
     }
 
     public Api getApi() {
         return new Api(this);
     }
 
+    @Override
     public Descriptor<ComputerSet> getDescriptor() {
         return Jenkins.get().getDescriptorOrDie(ComputerSet.class);
     }
@@ -402,10 +410,11 @@ public final class ComputerSet extends AbstractModelObject implements Describabl
      */
     public static void initialize() {}
 
-    @Initializer(after= JOB_CONFIG_ADAPTED)
+    @Initializer(after = JOB_CONFIG_ADAPTED)
     public static void init() {
         // start monitoring nodes, although there's no hurry.
         Timer.get().schedule(new SafeTimerTask() {
+            @Override
             public void doRun() {
                 ComputerSet.initialize();
             }
@@ -431,14 +440,14 @@ public final class ComputerSet extends AbstractModelObject implements Describabl
 
     static {
         try {
-            DescribableList<NodeMonitor,Descriptor<NodeMonitor>> r
+            DescribableList<NodeMonitor, Descriptor<NodeMonitor>> r
                     = new DescribableList<>(Saveable.NOOP);
 
             // load persisted monitors
             XmlFile xf = getConfigFile();
-            if(xf.exists()) {
-                DescribableList<NodeMonitor,Descriptor<NodeMonitor>> persisted =
-                        (DescribableList<NodeMonitor,Descriptor<NodeMonitor>>) xf.read();
+            if (xf.exists()) {
+                DescribableList<NodeMonitor, Descriptor<NodeMonitor>> persisted =
+                        (DescribableList<NodeMonitor, Descriptor<NodeMonitor>>) xf.read();
                 List<NodeMonitor> sanitized = new ArrayList<>();
                 for (NodeMonitor nm : persisted) {
                     try {
@@ -453,9 +462,9 @@ public final class ComputerSet extends AbstractModelObject implements Describabl
 
             // if we have any new monitors, let's add them
             for (Descriptor<NodeMonitor> d : NodeMonitor.all())
-                if(r.get(d)==null) {
-                    NodeMonitor i = createDefaultInstance(d,false);
-                    if(i!=null)
+                if (r.get(d) == null) {
+                    NodeMonitor i = createDefaultInstance(d, false);
+                    if (i != null)
                         r.add(i);
                 }
             monitors.replaceBy(r.toList());
@@ -466,11 +475,11 @@ public final class ComputerSet extends AbstractModelObject implements Describabl
 
     private static NodeMonitor createDefaultInstance(Descriptor<NodeMonitor> d, boolean ignored) {
         try {
-            NodeMonitor nm = d.clazz.newInstance();
+            NodeMonitor nm = d.clazz.getDeclaredConstructor().newInstance();
             nm.setIgnored(ignored);
             return nm;
-        } catch (InstantiationException | IllegalAccessException e) {
-            LOGGER.log(Level.SEVERE, "Failed to instantiate "+d.clazz,e);
+        } catch (NoSuchMethodException | InstantiationException | IllegalAccessException | InvocationTargetException e) {
+            LOGGER.log(Level.SEVERE, "Failed to instantiate " + d.clazz, e);
         }
         return null;
     }
