@@ -1,18 +1,18 @@
 /*
  * The MIT License
- * 
+ *
  * Copyright (c) 2004-2011, Sun Microsystems, Inc., Kohsuke Kawaguchi
- * 
+ *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
  * in the Software without restriction, including without limitation the rights
  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  * copies of the Software, and to permit persons to whom the Software is
  * furnished to do so, subject to the following conditions:
- * 
+ *
  * The above copyright notice and this permission notice shall be included in
  * all copies or substantial portions of the Software.
- * 
+ *
  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -21,15 +21,22 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package hudson.model;
 
+import static hudson.util.QuotedStringTokenizer.quote;
+import static javax.servlet.http.HttpServletResponse.SC_NOT_FOUND;
+
+import edu.umd.cs.findbugs.annotations.CheckForNull;
+import edu.umd.cs.findbugs.annotations.NonNull;
+import edu.umd.cs.findbugs.annotations.Nullable;
+import hudson.BulkChange;
 import hudson.DescriptorExtensionList;
+import hudson.ExtensionList;
 import hudson.PluginWrapper;
 import hudson.RelativePath;
-import hudson.XmlFile;
-import hudson.BulkChange;
-import hudson.ExtensionList;
 import hudson.Util;
+import hudson.XmlFile;
 import hudson.model.listeners.SaveableListener;
 import hudson.security.Permission;
 import hudson.util.FormApply;
@@ -37,6 +44,33 @@ import hudson.util.FormValidation.CheckMethod;
 import hudson.util.ReflectionUtils;
 import hudson.util.ReflectionUtils.Parameter;
 import hudson.views.ListViewColumn;
+import java.beans.Introspector;
+import java.io.File;
+import java.io.IOException;
+import java.io.InputStream;
+import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
+import java.lang.reflect.Modifier;
+import java.lang.reflect.ParameterizedType;
+import java.lang.reflect.Type;
+import java.net.URL;
+import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.IdentityHashMap;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Locale;
+import java.util.Map;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.logging.Level;
+import java.util.logging.Logger;
+import javax.servlet.RequestDispatcher;
+import javax.servlet.ServletException;
 import jenkins.model.GlobalConfiguration;
 import jenkins.model.GlobalConfigurationCategory;
 import jenkins.model.Jenkins;
@@ -44,45 +78,20 @@ import jenkins.security.RedactSecretJsonInErrorMessageSanitizer;
 import jenkins.util.io.OnMaster;
 import net.sf.json.JSONArray;
 import net.sf.json.JSONObject;
-import org.kohsuke.stapler.*;
+import org.apache.commons.io.IOUtils;
+import org.apache.commons.lang.StringUtils;
+import org.jvnet.tiger_types.Types;
+import org.kohsuke.stapler.Ancestor;
+import org.kohsuke.stapler.BindInterceptor;
+import org.kohsuke.stapler.Facet;
+import org.kohsuke.stapler.HttpResponse;
+import org.kohsuke.stapler.QueryParameter;
+import org.kohsuke.stapler.Stapler;
+import org.kohsuke.stapler.StaplerRequest;
+import org.kohsuke.stapler.StaplerResponse;
+import org.kohsuke.stapler.WebApp;
 import org.kohsuke.stapler.jelly.JellyCompatibleFacet;
 import org.kohsuke.stapler.lang.Klass;
-import org.springframework.util.StringUtils;
-import org.jvnet.tiger_types.Types;
-import org.apache.commons.io.IOUtils;
-
-import static hudson.util.QuotedStringTokenizer.*;
-import static javax.servlet.http.HttpServletResponse.SC_NOT_FOUND;
-
-import javax.servlet.ServletException;
-import javax.servlet.RequestDispatcher;
-import java.io.File;
-import java.io.IOException;
-import java.io.InputStream;
-import java.net.URL;
-import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.HashMap;
-import java.util.Locale;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.logging.Level;
-import java.util.logging.Logger;
-import java.lang.reflect.Method;
-import java.lang.reflect.Modifier;
-import java.lang.reflect.Type;
-import java.lang.reflect.Field;
-import java.lang.reflect.ParameterizedType;
-import java.beans.Introspector;
-import java.util.IdentityHashMap;
-import edu.umd.cs.findbugs.annotations.CheckForNull;
-import edu.umd.cs.findbugs.annotations.NonNull;
-import edu.umd.cs.findbugs.annotations.Nullable;
 
 /**
  * Metadata about a configurable instance.
@@ -128,7 +137,7 @@ import edu.umd.cs.findbugs.annotations.Nullable;
  * {@link Descriptor} defines addition to the standard Java reflection
  * and provides reflective information about its corresponding {@link Describable}.
  * These are primarily used by tag libraries to
- * keep the Jelly scripts concise. 
+ * keep the Jelly scripts concise.
  *
  * @author Kohsuke Kawaguchi
  * @see Describable
@@ -139,12 +148,12 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
      */
     public final transient Class<? extends T> clazz;
 
-    private final transient Map<String,CheckMethod> checkMethods = new ConcurrentHashMap<>(2);
+    private final transient Map<String, CheckMethod> checkMethods = new ConcurrentHashMap<>(2);
 
     /**
      * Lazily computed list of properties on {@link #clazz} and on the descriptor itself.
      */
-    private transient volatile Map<String, PropertyType> propertyTypes,globalPropertyTypes;
+    private transient volatile Map<String, PropertyType> propertyTypes, globalPropertyTypes;
 
     /**
      * Represents a readable property on {@link Describable}.
@@ -162,35 +171,35 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
         }
 
         PropertyType(Field f) {
-            this(f.getType(),f.getGenericType(),f.toString());
+            this(f.getType(), f.getGenericType(), f.toString());
         }
 
         PropertyType(Method getter) {
-            this(getter.getReturnType(),getter.getGenericReturnType(),getter.toString());
+            this(getter.getReturnType(), getter.getGenericReturnType(), getter.toString());
         }
 
         public Enum[] getEnumConstants() {
-            return (Enum[])clazz.getEnumConstants();
+            return (Enum[]) clazz.getEnumConstants();
         }
 
         /**
          * If the property is a collection/array type, what is an item type?
          */
         public Class getItemType() {
-            if(itemType==null)
+            if (itemType == null)
                 itemType = computeItemType();
             return itemType;
         }
 
         private Class computeItemType() {
-            if(clazz.isArray()) {
+            if (clazz.isArray()) {
                 return clazz.getComponentType();
             }
-            if(Collection.class.isAssignableFrom(clazz)) {
+            if (Collection.class.isAssignableFrom(clazz)) {
                 Type col = Types.getBaseClass(type, Collection.class);
 
                 if (col instanceof ParameterizedType)
-                    return Types.erasure(Types.getTypeArgument(col,0));
+                    return Types.erasure(Types.getTypeArgument(col, 0));
                 else
                     return Object.class;
             }
@@ -207,11 +216,11 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
         public Descriptor getItemTypeDescriptorOrDie() {
             Class it = getItemType();
             if (it == null) {
-                throw new AssertionError(clazz + " is not an array/collection type in " + displayName + ". See https://jenkins.io/redirect/developer/class-is-missing-descriptor");
+                throw new AssertionError(clazz + " is not an array/collection type in " + displayName + ". See https://www.jenkins.io/redirect/developer/class-is-missing-descriptor");
             }
             Descriptor d = Jenkins.get().getDescriptor(it);
-            if (d==null)
-                throw new AssertionError(it +" is missing its descriptor in "+displayName+". See https://jenkins.io/redirect/developer/class-is-missing-descriptor");
+            if (d == null)
+                throw new AssertionError(it + " is missing its descriptor in " + displayName + ". See https://www.jenkins.io/redirect/developer/class-is-missing-descriptor");
             return d;
         }
 
@@ -233,9 +242,9 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
     /**
      * Help file redirect, keyed by the field name to the path.
      *
-     * @see #getHelpFile(String) 
+     * @see #getHelpFile(String)
      */
-    private final transient Map<String,HelpRedirect> helpRedirect = new HashMap<>(2);
+    private final transient Map<String, HelpRedirect> helpRedirect = new HashMap<>(2);
 
     private static class HelpRedirect {
         private final Class<? extends Describable> owner;
@@ -259,8 +268,8 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
      *      (this hack is needed since derived types can't call "getClass()" to refer to itself.
      */
     protected Descriptor(Class<? extends T> clazz) {
-        if (clazz==self())
-            clazz = (Class)getClass();
+        if (clazz == self())
+            clazz = (Class) getClass();
         this.clazz = clazz;
         // doing this turns out to be very error prone,
         // as field initializers in derived types will override values.
@@ -271,13 +280,13 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
      * Infers the type of the corresponding {@link Describable} from the outer class.
      * This version works when you follow the common convention, where a descriptor
      * is written as the static nested class of the describable class.
-     * 
+     *
      * @since 1.278
      */
     protected Descriptor() {
-        this.clazz = (Class<T>)getClass().getEnclosingClass();
-        if(clazz==null)
-            throw new AssertionError(getClass()+" doesn't have an outer class. Use the constructor that takes the Class object explicitly.");
+        this.clazz = (Class<T>) getClass().getEnclosingClass();
+        if (clazz == null)
+            throw new AssertionError(getClass() + " doesn't have an outer class. Use the constructor that takes the Class object explicitly.");
 
         // detect an type error
         Type bt = Types.getBaseClass(getClass(), Descriptor.class);
@@ -285,19 +294,19 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
             ParameterizedType pt = (ParameterizedType) bt;
             // this 't' is the closest approximation of T of Descriptor<T>.
             Class t = Types.erasure(pt.getActualTypeArguments()[0]);
-            if(!t.isAssignableFrom(clazz))
-                throw new AssertionError("Outer class "+clazz+" of "+getClass()+" is not assignable to "+t+". Perhaps wrong outer class?");
+            if (!t.isAssignableFrom(clazz))
+                throw new AssertionError("Outer class " + clazz + " of " + getClass() + " is not assignable to " + t + ". Perhaps wrong outer class?");
         }
 
         // detect a type error. this Descriptor is supposed to be returned from getDescriptor(), so make sure its type match up.
         // this prevents a bug like http://www.nabble.com/Creating-a-new-parameter-Type-%3A-Masked-Parameter-td24786554.html
         try {
             Method getd = clazz.getMethod("getDescriptor");
-            if(!getd.getReturnType().isAssignableFrom(getClass())) {
-                throw new AssertionError(getClass()+" must be assignable to "+getd.getReturnType());
+            if (!getd.getReturnType().isAssignableFrom(getClass())) {
+                throw new AssertionError(getClass() + " must be assignable to " + getd.getReturnType());
             }
         } catch (NoSuchMethodException e) {
-            throw new AssertionError(getClass()+" is missing getDescriptor method.");
+            throw new AssertionError(getClass() + " is missing getDescriptor method.", e);
         }
 
     }
@@ -327,7 +336,7 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
      *
      * @return
      *      Stick to valid Java identifier character, plus '.', which had to be allowed for historical reasons.
-     * 
+     *
      * @since 1.391
      */
     public String getId() {
@@ -345,7 +354,7 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
     public Class<T> getT() {
         Type subTyping = Types.getBaseClass(getClass(), Descriptor.class);
         if (!(subTyping instanceof ParameterizedType)) {
-            throw new IllegalStateException(getClass()+" doesn't extend Descriptor with a type parameter.");
+            throw new IllegalStateException(getClass() + " doesn't extend Descriptor with a type parameter.");
         }
         return Types.erasure(Types.getTypeArgument(subTyping, 0));
     }
@@ -355,7 +364,7 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
      * Since {@link Jenkins} is a {@link DescriptorByNameOwner}, there's always one such ancestor to any request.
      */
     public String getDescriptorUrl() {
-        return "descriptorByName/"+getId();
+        return "descriptorByName/" + getId();
     }
 
     /**
@@ -363,7 +372,7 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
      * @since 1.406
      */
     public final String getDescriptorFullUrl() {
-        return getCurrentDescriptorByNameUrl()+'/'+getDescriptorUrl();
+        return getCurrentDescriptorByNameUrl() + '/' + getDescriptorUrl();
     }
 
     /**
@@ -374,7 +383,7 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
 
         // this override allows RenderOnDemandClosure to preserve the proper value
         Object url = req.getAttribute("currentDescriptorByNameUrl");
-        if (url!=null)  return url.toString();
+        if (url != null)  return url.toString();
 
         Ancestor a = req.findAncestor(DescriptorByNameOwner.class);
         return a.getUrl();
@@ -397,9 +406,9 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
      */
     public CheckMethod getCheckMethod(String fieldName) {
         CheckMethod method = checkMethods.get(fieldName);
-        if(method==null) {
-            method = new CheckMethod(this,fieldName);
-            checkMethods.put(fieldName,method);
+        if (method == null) {
+            method = new CheckMethod(this, fieldName);
+            checkMethods.put(fieldName, method);
         }
 
         return method;
@@ -410,41 +419,41 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
      * and sets that as the 'fillDependsOn' attribute. Also computes the URL of the doFillXyzItems and
      * sets that as the 'fillUrl' attribute.
      */
-    public void calcFillSettings(String field, Map<String,Object> attributes) {
+    public void calcFillSettings(String field, Map<String, Object> attributes) {
         String capitalizedFieldName = StringUtils.capitalize(field);
         String methodName = "doFill" + capitalizedFieldName + "Items";
         Method method = ReflectionUtils.getPublicMethodNamed(getClass(), methodName);
-        if(method==null)
+        if (method == null)
             throw new IllegalStateException(String.format("%s doesn't have the %s method for filling a drop-down list", getClass(), methodName));
 
         // build query parameter line by figuring out what should be submitted
         List<String> depends = buildFillDependencies(method, new ArrayList<>());
 
         if (!depends.isEmpty())
-            attributes.put("fillDependsOn",Util.join(depends," "));
+            attributes.put("fillDependsOn", String.join(" ", depends));
         attributes.put("fillUrl", String.format("%s/%s/fill%sItems", getCurrentDescriptorByNameUrl(), getDescriptorUrl(), capitalizedFieldName));
     }
 
     private List<String> buildFillDependencies(Method method, List<String> depends) {
         for (Parameter p : ReflectionUtils.getParameters(method)) {
             QueryParameter qp = p.annotation(QueryParameter.class);
-            if (qp!=null) {
+            if (qp != null) {
                 String name = qp.value();
-                if (name.length()==0) name = p.name();
-                if (name==null || name.length()==0)
+                if (name.length() == 0) name = p.name();
+                if (name == null || name.length() == 0)
                     continue;   // unknown parameter name. we'll report the error when the form is submitted.
 
                 RelativePath rp = p.annotation(RelativePath.class);
-                if (rp!=null)
-                    name = rp.value()+'/'+name;
+                if (rp != null)
+                    name = rp.value() + '/' + name;
 
                 depends.add(name);
                 continue;
             }
 
             Method m = ReflectionUtils.getPublicMethodNamed(p.type(), "fromStapler");
-            if (m!=null)
-                buildFillDependencies(m,depends);
+            if (m != null)
+                buildFillDependencies(m, depends);
         }
         return depends;
     }
@@ -452,11 +461,11 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
     /**
      * Computes the auto-completion setting
      */
-    public void calcAutoCompleteSettings(String field, Map<String,Object> attributes) {
+    public void calcAutoCompleteSettings(String field, Map<String, Object> attributes) {
         String capitalizedFieldName = StringUtils.capitalize(field);
         String methodName = "doAutoComplete" + capitalizedFieldName;
         Method method = ReflectionUtils.getPublicMethodNamed(getClass(), methodName);
-        if(method==null)
+        if (method == null)
             return;    // no auto-completion
 
         attributes.put("autoCompleteUrl", String.format("%s/%s/autoComplete%s", getCurrentDescriptorByNameUrl(), getDescriptorUrl(), capitalizedFieldName));
@@ -467,7 +476,7 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
      */
     public @CheckForNull PropertyType getPropertyType(@NonNull Object instance, @NonNull String field) {
         // in global.jelly, instance==descriptor
-        return instance==this ? getGlobalPropertyType(field) : getPropertyType(field);
+        return instance == this ? getGlobalPropertyType(field) : getPropertyType(field);
     }
 
     /**
@@ -490,7 +499,7 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
      * Obtains the property type of the given field of {@link #clazz}
      */
     public PropertyType getPropertyType(String field) {
-        if(propertyTypes==null)
+        if (propertyTypes == null)
             propertyTypes = buildPropertyTypes(clazz);
         return propertyTypes.get(field);
     }
@@ -499,7 +508,7 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
      * Obtains the property type of the given field of this descriptor.
      */
     public PropertyType getGlobalPropertyType(String field) {
-        if(globalPropertyTypes==null)
+        if (globalPropertyTypes == null)
             globalPropertyTypes = buildPropertyTypes(getClass());
         return globalPropertyTypes.get(field);
     }
@@ -510,11 +519,11 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
     private Map<String, PropertyType> buildPropertyTypes(Class<?> clazz) {
         Map<String, PropertyType> r = new HashMap<>();
         for (Field f : clazz.getFields())
-            r.put(f.getName(),new PropertyType(f));
+            r.put(f.getName(), new PropertyType(f));
 
         for (Method m : clazz.getMethods())
-            if(m.getName().startsWith("get"))
-                r.put(Introspector.decapitalize(m.getName().substring(3)),new PropertyType(m));
+            if (m.getName().startsWith("get"))
+                r.put(Introspector.decapitalize(m.getName().substring(3)), new PropertyType(m));
 
         return r;
     }
@@ -523,17 +532,17 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
      * Gets the class name nicely escaped to be usable as a key in the structured form submission.
      */
     public final String getJsonSafeClassName() {
-        return getId().replace('.','-');
+        return getId().replace('.', '-');
     }
 
     /**
      * @deprecated
      *      Implement {@link #newInstance(StaplerRequest, JSONObject)} method instead.
-     *      Deprecated as of 1.145. 
+     *      Deprecated as of 1.145.
      */
     @Deprecated
     public T newInstance(StaplerRequest req) throws FormException {
-        throw new UnsupportedOperationException(getClass()+" should implement newInstance(StaplerRequest,JSONObject)");
+        throw new UnsupportedOperationException(getClass() + " should implement newInstance(StaplerRequest,JSONObject)");
     }
 
     /**
@@ -559,7 +568,7 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
      *      Always non-null (see note above.) This object includes represents the entire submission.
      * @param formData
      *      The JSON object that captures the configuration data for this {@link Descriptor}.
-     *      See http://wiki.jenkins-ci.org/display/JENKINS/Structured+Form+Submission
+     *      See https://www.jenkins.io/doc/developer/forms/structured-form-submission/
      *      Always non-null.
      *
      * @throws FormException
@@ -570,21 +579,19 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
         try {
             Method m = getClass().getMethod("newInstance", StaplerRequest.class);
 
-            if(!Modifier.isAbstract(m.getDeclaringClass().getModifiers())) {
+            if (!Modifier.isAbstract(m.getDeclaringClass().getModifiers())) {
                 // this class overrides newInstance(StaplerRequest).
                 // maintain the backward compatible behavior
                 return verifyNewInstance(newInstance(req));
             } else {
-                if (req==null) {
+                if (req == null) {
                     // yes, req is supposed to be always non-null, but see the note above
-                    return verifyNewInstance(clazz.newInstance());
+                    return verifyNewInstance(clazz.getDeclaredConstructor().newInstance());
                 }
                 return verifyNewInstance(bindJSON(req, clazz, formData, true));
             }
-        } catch (NoSuchMethodException e) {
-            throw new AssertionError(e); // impossible
-        } catch (InstantiationException | IllegalAccessException | RuntimeException e) {
-            throw new Error("Failed to instantiate "+clazz+" from "+RedactSecretJsonInErrorMessageSanitizer.INSTANCE.sanitize(formData),e);
+        } catch (NoSuchMethodException | InstantiationException | IllegalAccessException | InvocationTargetException | RuntimeException e) {
+            throw new LinkageError("Failed to instantiate " + clazz + " from " + RedactSecretJsonInErrorMessageSanitizer.INSTANCE.sanitize(formData), e);
         }
     }
 
@@ -628,7 +635,7 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
     private static class NewInstanceBindInterceptor extends BindInterceptor {
 
         private final BindInterceptor oldInterceptor;
-        private final Map<JSONObject,Boolean> processed = new IdentityHashMap<>();
+        private final IdentityHashMap<JSONObject, Boolean> processed = new IdentityHashMap<>();
 
         NewInstanceBindInterceptor(BindInterceptor oldInterceptor) {
             LOGGER.log(Level.FINER, "new interceptor delegating to {0}", oldInterceptor);
@@ -700,9 +707,9 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
      * See http://hudson.361315.n4.nabble.com/Help-Hint-needed-Post-build-action-doesn-t-stay-activated-td2308833.html
      */
     private T verifyNewInstance(T t) {
-        if (t!=null && t.getDescriptor()!=this) {
+        if (t != null && t.getDescriptor() != this) {
             // TODO: should this be a fatal error?
-            LOGGER.warning("Father of "+ t+" and its getDescriptor() points to two different instances. Probably misplaced @Extension. See http://hudson.361315.n4.nabble.com/Help-Hint-needed-Post-build-action-doesn-t-stay-activated-td2308833.html");
+            LOGGER.warning("Father of " + t + " and its getDescriptor() points to two different instances. Probably misplaced @Extension. See http://hudson.361315.n4.nabble.com/Help-Hint-needed-Post-build-action-doesn-t-stay-activated-td2308833.html");
         }
         return t;
     }
@@ -745,48 +752,48 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
      * locale variations.
      */
     public String getHelpFile(final String fieldName) {
-        return getHelpFile(getKlass(),fieldName);
+        return getHelpFile(getKlass(), fieldName);
     }
 
     public String getHelpFile(Klass<?> clazz, String fieldName) {
         HelpRedirect r = helpRedirect.get(fieldName);
-        if (r!=null)    return r.resolve();
+        if (r != null)    return r.resolve();
 
         for (Klass<?> c : clazz.getAncestors()) {
             String page = "/descriptor/" + getId() + "/help";
             String suffix;
-            if(fieldName==null) {
-                suffix="";
+            if (fieldName == null) {
+                suffix = "";
             } else {
-                page += '/'+fieldName;
-                suffix='-'+fieldName;
+                page += '/' + fieldName;
+                suffix = '-' + fieldName;
             }
 
             try {
-                if(Stapler.getCurrentRequest().getView(c,"help"+suffix)!=null)
+                if (Stapler.getCurrentRequest().getView(c, "help" + suffix) != null)
                     return page;
             } catch (IOException e) {
                 throw new Error(e);
             }
 
-            if(getStaticHelpUrl(c, suffix) !=null)    return page;
+            if (getStaticHelpUrl(c, suffix) != null)    return page;
         }
         return null;
     }
-    
+
     /**
      * Tells Jenkins that the help file for the field 'fieldName' is defined in the help file for
      * the 'fieldNameToRedirectTo' in the 'owner' class.
      * @since 1.425
      */
     protected void addHelpFileRedirect(String fieldName, Class<? extends Describable> owner, String fieldNameToRedirectTo) {
-        helpRedirect.put(fieldName, new HelpRedirect(owner,fieldNameToRedirectTo));
+        helpRedirect.put(fieldName, new HelpRedirect(owner, fieldNameToRedirectTo));
     }
 
     /**
      * Checks if the given object is created from this {@link Descriptor}.
      */
-    public final boolean isInstance( T instance ) {
+    public final boolean isInstance(T instance) {
         return clazz.isInstance(instance);
     }
 
@@ -802,7 +809,7 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
      *      As of 1.239, use {@link #configure(StaplerRequest, JSONObject)}.
      */
     @Deprecated
-    public boolean configure( StaplerRequest req ) throws FormException {
+    public boolean configure(StaplerRequest req) throws FormException {
         return true;
     }
 
@@ -813,11 +820,11 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
      *
      * @param json
      *      The JSON object that captures the configuration data for this {@link Descriptor}.
-     *      See http://wiki.jenkins-ci.org/display/JENKINS/Structured+Form+Submission
+     *      See https://www.jenkins.io/doc/developer/forms/structured-form-submission/
      * @return false
      *      to keep the client in the same config page.
      */
-    public boolean configure( StaplerRequest req, JSONObject json ) throws FormException {
+    public boolean configure(StaplerRequest req, JSONObject json) throws FormException {
         // compatibility
         return configure(req);
     }
@@ -856,15 +863,15 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
     }
 
     private String getViewPage(Class<?> clazz, String pageName, String defaultValue) {
-        return getViewPage(clazz,Collections.singleton(pageName),defaultValue);
+        return getViewPage(clazz, Collections.singleton(pageName), defaultValue);
     }
 
     private String getViewPage(Class<?> clazz, Collection<String> pageNames, String defaultValue) {
-        while(clazz!=Object.class && clazz!=null) {
+        while (clazz != Object.class && clazz != null) {
             for (String pageName : pageNames) {
                 String name = clazz.getName().replace('.', '/').replace('$', '/') + "/" + pageName;
-                if(clazz.getClassLoader().getResource(name)!=null)
-                    return '/'+name;
+                if (clazz.getClassLoader().getResource(name) != null)
+                    return '/' + name;
             }
             clazz = clazz.getSuperclass();
         }
@@ -877,7 +884,7 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
         // it doesn't exist.
         // Or this error is fatal, in which case we want the developer to see what page he's missing.
         // so we put the page name.
-        return getViewPage(clazz,pageName,pageName);
+        return getViewPage(clazz, pageName, pageName);
     }
 
     protected List<String> getPossibleViewNames(String baseName) {
@@ -886,7 +893,7 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
             if (f instanceof JellyCompatibleFacet) {
                 JellyCompatibleFacet jcf = (JellyCompatibleFacet) f;
                 for (String ext : jcf.getScriptExtensions())
-                    names.add(baseName +ext);
+                    names.add(baseName + ext);
             }
         }
         return names;
@@ -896,13 +903,14 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
     /**
      * Saves the configuration info to the disk.
      */
+    @Override
     public synchronized void save() {
-        if(BulkChange.contains(this))   return;
+        if (BulkChange.contains(this))   return;
         try {
             getConfigFile().write(this);
             SaveableListener.fireOnChange(this, getConfigFile());
         } catch (IOException e) {
-            LOGGER.log(Level.WARNING, "Failed to save "+getConfigFile(),e);
+            LOGGER.log(Level.WARNING, "Failed to save " + getConfigFile(), e);
         }
     }
 
@@ -916,18 +924,18 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
      */
     public synchronized void load() {
         XmlFile file = getConfigFile();
-        if(!file.exists())
+        if (!file.exists())
             return;
 
         try {
             file.unmarshal(this);
         } catch (IOException e) {
-            LOGGER.log(Level.WARNING, "Failed to load "+file, e);
+            LOGGER.log(Level.WARNING, "Failed to load " + file, e);
         }
     }
 
     protected XmlFile getConfigFile() {
-        return new XmlFile(new File(Jenkins.get().getRootDir(),getId()+".xml"));
+        return new XmlFile(new File(Jenkins.get().getRootDir(), getId() + ".xml"));
     }
 
     /**
@@ -945,32 +953,32 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
      */
     public void doHelp(StaplerRequest req, StaplerResponse rsp) throws IOException, ServletException {
         String path = req.getRestOfPath();
-        if(path.contains("..")) throw new ServletException("Illegal path: "+path);
+        if (path.contains("..")) throw new ServletException("Illegal path: " + path);
 
-        path = path.replace('/','-');
+        path = path.replace('/', '-');
 
         PluginWrapper pw = getPlugin();
-        if (pw!=null) {
-            rsp.setHeader("X-Plugin-Short-Name",pw.getShortName());
-            rsp.setHeader("X-Plugin-Long-Name",pw.getLongName());
+        if (pw != null) {
+            rsp.setHeader("X-Plugin-Short-Name", pw.getShortName());
+            rsp.setHeader("X-Plugin-Long-Name", pw.getLongName());
             rsp.setHeader("X-Plugin-From", Messages.Descriptor_From(
-                    pw.getLongName().replace("Hudson","Jenkins").replace("hudson","jenkins"), pw.getUrl()));
+                    pw.getLongName().replace("Hudson", "Jenkins").replace("hudson", "jenkins"), pw.getUrl()));
         }
 
-        for (Klass<?> c= getKlass(); c!=null; c=c.getSuperClass()) {
-            RequestDispatcher rd = Stapler.getCurrentRequest().getView(c, "help"+path);
-            if(rd!=null) {// template based help page
-                rd.forward(req,rsp);
+        for (Klass<?> c = getKlass(); c != null; c = c.getSuperClass()) {
+            RequestDispatcher rd = Stapler.getCurrentRequest().getView(c, "help" + path);
+            if (rd != null) { // template based help page
+                rd.forward(req, rsp);
                 return;
             }
 
             URL url = getStaticHelpUrl(c, path);
-            if(url!=null) {
+            if (url != null) {
                 // TODO: generalize macro expansion and perhaps even support JEXL
                 rsp.setContentType("text/html;charset=UTF-8");
                 try (InputStream in = url.openStream()) {
                     String literal = IOUtils.toString(in, StandardCharsets.UTF_8);
-                    rsp.getWriter().println(Util.replaceMacro(literal, Collections.singletonMap("rootURL",req.getContextPath())));
+                    rsp.getWriter().println(Util.replaceMacro(literal, Collections.singletonMap("rootURL", req.getContextPath())));
                 }
                 return;
             }
@@ -981,15 +989,15 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
     private URL getStaticHelpUrl(Klass<?> c, String suffix) {
         Locale locale = Stapler.getCurrentRequest().getLocale();
 
-        String base = "help"+suffix;
+        String base = "help" + suffix;
 
         URL url;
         url = c.getResource(base + '_' + locale.getLanguage() + '_' + locale.getCountry() + '_' + locale.getVariant() + ".html");
-        if(url!=null)    return url;
+        if (url != null)    return url;
         url = c.getResource(base + '_' + locale.getLanguage() + '_' + locale.getCountry() + ".html");
-        if(url!=null)    return url;
+        if (url != null)    return url;
         url = c.getResource(base + '_' + locale.getLanguage() + ".html");
-        if(url!=null)    return url;
+        if (url != null)    return url;
 
         // default
         return c.getResource(base + ".html");
@@ -1002,17 +1010,17 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
 
 
     // to work around warning when creating a generic array type
-    public static <T> T[] toArray( T... values ) {
+    public static <T> T[] toArray(T... values) {
         return values;
     }
 
-    public static <T> List<T> toList( T... values ) {
+    public static <T> List<T> toList(T... values) {
         return new ArrayList<>(Arrays.asList(values));
     }
 
     public static <T extends Describable<T>>
-    Map<Descriptor<T>,T> toMap(Iterable<T> describables) {
-        Map<Descriptor<T>,T> m = new LinkedHashMap<>();
+    Map<Descriptor<T>, T> toMap(Iterable<T> describables) {
+        Map<Descriptor<T>, T> m = new LinkedHashMap<>();
         for (T d : describables) {
             Descriptor<T> descriptor;
             try {
@@ -1044,7 +1052,7 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
     List<T> newInstancesFromHeteroList(StaplerRequest req, JSONObject formData, String key,
                 Collection<? extends Descriptor<T>> descriptors) throws FormException {
 
-        return newInstancesFromHeteroList(req,formData.get(key),descriptors);
+        return newInstancesFromHeteroList(req, formData.get(key), descriptors);
     }
 
     public static <T extends Describable<T>>
@@ -1053,9 +1061,9 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
 
         List<T> items = new ArrayList<>();
 
-        if (formData!=null) {
+        if (formData != null) {
             for (Object o : JSONArray.fromObject(formData)) {
-                JSONObject jo = (JSONObject)o;
+                JSONObject jo = (JSONObject) o;
                 Descriptor<T> d = null;
                 // 'kind' and '$class' are mutually exclusive (see class-entry.jelly), but to be more lenient on the reader side,
                 // we check them both anyway. 'kind' (which maps to ID) is more unique than '$class', which can have multiple matching
@@ -1099,7 +1107,7 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
      */
     public static @CheckForNull <T extends Descriptor> T findById(Collection<? extends T> list, String id) {
         for (T d : list) {
-            if(d.getId().equals(id))
+            if (d.getId().equals(id))
                 return d;
         }
         return null;
@@ -1111,7 +1119,7 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
      */
     private static @CheckForNull <T extends Descriptor> T findByClassName(Collection<? extends T> list, String className) {
         for (T d : list) {
-            if(d.getClass().getName().equals(className))
+            if (d.getClass().getName().equals(className))
                 return d;
         }
         return null;
@@ -1124,7 +1132,7 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
      */
     public static @CheckForNull <T extends Descriptor> T findByDescribableClassName(Collection<? extends T> list, String className) {
         for (T d : list) {
-            if(d.clazz.getName().equals(className))
+            if (d.clazz.getName().equals(className))
                 return d;
         }
         return null;
@@ -1148,7 +1156,7 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
      */
     @Deprecated
     public static @CheckForNull Descriptor find(String className) {
-        return find(ExtensionList.lookup(Descriptor.class),className);
+        return find(ExtensionList.lookup(Descriptor.class), className);
     }
 
     public static final class FormException extends Exception implements HttpResponse {
@@ -1176,13 +1184,14 @@ public abstract class Descriptor<T extends Describable<T>> implements Saveable, 
             return formField;
         }
 
+        @Override
         public void generateResponse(StaplerRequest req, StaplerResponse rsp, Object node) throws IOException, ServletException {
             if (FormApply.isApply(req)) {
-                FormApply.applyResponse("notificationBar.show(" + quote(getMessage())+ ",notificationBar.ERROR)")
+                FormApply.applyResponse("notificationBar.show(" + quote(getMessage()) + ",notificationBar.ERROR)")
                         .generateResponse(req, rsp, node);
             } else {
                 // for now, we can't really use the field name that caused the problem.
-                new Failure(getMessage()).generateResponse(req,rsp,node,getCause());
+                new Failure(getMessage()).generateResponse(req, rsp, node, getCause());
             }
         }
     }
