@@ -21,9 +21,9 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package hudson.util;
 
-import com.google.common.collect.ImmutableSet;
 import com.infradna.tool.bridge_method_injector.WithBridgeMethods;
 import com.thoughtworks.xstream.converters.Converter;
 import com.thoughtworks.xstream.converters.MarshallingContext;
@@ -34,11 +34,15 @@ import com.thoughtworks.xstream.io.HierarchicalStreamWriter;
 import com.thoughtworks.xstream.mapper.Mapper;
 import hudson.model.Describable;
 import hudson.model.Saveable;
-
 import java.io.IOException;
+import java.io.UncheckedIOException;
+import java.lang.reflect.InvocationTargetException;
 import java.util.AbstractList;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Optional;
@@ -74,6 +78,7 @@ public class PersistedList<T> extends AbstractList<T> {
         this.owner = owner;
     }
 
+    @Override
     @WithBridgeMethods(void.class)
     public boolean add(T item) {
         data.add(item);
@@ -81,6 +86,7 @@ public class PersistedList<T> extends AbstractList<T> {
         return true;
     }
 
+    @Override
     @WithBridgeMethods(void.class)
     public boolean addAll(Collection<? extends T> items) {
         data.addAll(items);
@@ -93,13 +99,14 @@ public class PersistedList<T> extends AbstractList<T> {
         onModified();
     }
 
+    @Override
     public T get(int index) {
         return data.get(index);
     }
 
     public <U extends T> U get(Class<U> type) {
         for (T t : data)
-            if(type.isInstance(t))
+            if (type.isInstance(t))
                 return type.cast(t);
         return null;
     }
@@ -110,11 +117,12 @@ public class PersistedList<T> extends AbstractList<T> {
     public <U extends T> List<U> getAll(Class<U> type) {
         List<U> r = new ArrayList<>();
         for (T t : data)
-            if(type.isInstance(t))
+            if (type.isInstance(t))
                 r.add(type.cast(t));
         return r;
     }
 
+    @Override
     public int size() {
         return data.size();
     }
@@ -124,7 +132,7 @@ public class PersistedList<T> extends AbstractList<T> {
      */
     public void remove(Class<? extends T> type) throws IOException {
         for (T t : data) {
-            if(t.getClass()==type) {
+            if (t.getClass() == type) {
                 data.remove(t);
                 onModified();
                 return;
@@ -140,28 +148,29 @@ public class PersistedList<T> extends AbstractList<T> {
      */
     public void replace(T from, T to) throws IOException {
         List<T> copy = new ArrayList<>(data.getView());
-        for (int i=0; i<copy.size(); i++) {
+        for (int i = 0; i < copy.size(); i++) {
             if (copy.get(i).equals(from))
-                copy.set(i,to);
+                copy.set(i, to);
         }
         data.replaceBy(copy);
     }
 
+    @Override
     public boolean remove(Object o) {
-        boolean b = data.remove((T)o);
+        boolean b = data.remove((T) o);
         if (b)  _onModified();
         return b;
     }
 
     public void removeAll(Class<? extends T> type) throws IOException {
-        boolean modified=false;
+        boolean modified = false;
         for (T t : data) {
-            if(t.getClass()==type) {
+            if (t.getClass() == type) {
                 data.remove(t);
-                modified=true;
+                modified = true;
             }
         }
-        if(modified)
+        if (modified)
             onModified();
     }
 
@@ -193,8 +202,9 @@ public class PersistedList<T> extends AbstractList<T> {
     }
 
     // TODO until https://github.com/jenkinsci/jenkins-test-harness/pull/243 is widely adopted:
-    private static final Set<String> IGNORED_CLASSES = ImmutableSet.of("org.jvnet.hudson.test.TestBuilder", "org.jvnet.hudson.test.TestNotifier");
+    private static final Set<String> IGNORED_CLASSES = Collections.unmodifiableSet(new HashSet<>(Arrays.asList("org.jvnet.hudson.test.TestBuilder", "org.jvnet.hudson.test.TestNotifier")));
     // (SingleFileSCM & ExtractResourceWithChangesSCM would also be nice to suppress, but they are not kept in a PersistedList.)
+
     private static boolean ignoreSerializationErrors(Object o) {
         if (o != null) {
             for (Class<?> c = o.getClass(); c != Object.class; c = c.getSuperclass()) {
@@ -227,7 +237,8 @@ public class PersistedList<T> extends AbstractList<T> {
     /**
      * Gets all the {@link Describable}s in an array.
      */
-    public <T> T[] toArray(T[] array) {
+    @Override
+    public <X> X[] toArray(X[] array) {
         return data.toArray(array);
     }
 
@@ -235,10 +246,12 @@ public class PersistedList<T> extends AbstractList<T> {
         data.addAllTo(dst);
     }
 
+    @Override
     public boolean isEmpty() {
         return data.isEmpty();
     }
 
+    @Override
     public boolean contains(Object item) {
         return data.contains(item);
     }
@@ -260,23 +273,30 @@ public class PersistedList<T> extends AbstractList<T> {
             copyOnWriteListConverter = new CopyOnWriteList.ConverterImpl(mapper());
         }
 
+        @Override
         public boolean canConvert(Class type) {
             // handle subtypes in case the onModified method is overridden.
             return PersistedList.class.isAssignableFrom(type);
         }
 
+        @Override
         public void marshal(Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
             for (Object o : (PersistedList) source)
                 writeItem(o, context, writer);
         }
 
+        @Override
         public Object unmarshal(HierarchicalStreamReader reader, UnmarshallingContext context) {
             CopyOnWriteList core = copyOnWriteListConverter.unmarshal(reader, context);
 
             try {
-                PersistedList r = (PersistedList)context.getRequiredType().newInstance();
+                PersistedList r = (PersistedList) context.getRequiredType().getDeclaredConstructor().newInstance();
                 r.data.replaceBy(core);
                 return r;
+            } catch (NoSuchMethodException e) {
+                NoSuchMethodError x = new NoSuchMethodError();
+                x.initCause(e);
+                throw x;
             } catch (InstantiationException e) {
                 InstantiationError x = new InstantiationError();
                 x.initCause(e);
@@ -285,8 +305,20 @@ public class PersistedList<T> extends AbstractList<T> {
                 IllegalAccessError x = new IllegalAccessError();
                 x.initCause(e);
                 throw x;
+            } catch (InvocationTargetException e) {
+                Throwable t = e.getCause();
+                if (t instanceof RuntimeException) {
+                    throw (RuntimeException) t;
+                } else if (t instanceof IOException) {
+                    throw new UncheckedIOException((IOException) t);
+                } else if (t instanceof Exception) {
+                    throw new RuntimeException(t);
+                } else if (t instanceof Error) {
+                    throw (Error) t;
+                } else {
+                    throw new Error(e);
+                }
             }
         }
     }
 }
-
